--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,11 @@
-file(GLOB ASSETS_MANAGE_HEADER ${CMASSETS_MANAGE_ROOT_INCLUDE_PATH}/hgl/assets/*.h)
+file(GLOB ASSETS_MANAGE_HEADER ${CMASSETS_MANAGE_ROOT_INCLUDE_PATH}/hgl/asset/*.h)
 
-set(ASSETS_MANAGE_SOURCE    AssetsSource.cpp
-                            AssetsSourceFilesystem.cpp)
+set(ASSETS_MANAGE_SOURCE    AssetSource.cpp
+                            AssetSourceFilesystem.cpp)
 
 IF(ANDROID)
     set(ASSETS_MANAGE_SOURCE    ${ASSETS_MANAGE_SOURCE}
-                                AssetsSourceAndroid.cpp)
+                                AssetSourceAndroid.cpp)
 ENDIF()
 
 add_cm_library(CMAssetsManage   "CM"    ${ASSETS_MANAGE_HEADER}
