--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,9 @@
 file(GLOB ASSETS_MANAGE_HEADER ${CMASSETS_MANAGE_ROOT_INCLUDE_PATH}/hgl/asset/*.h)
 
 set(ASSETS_MANAGE_SOURCE    AssetSource.cpp
-                            AssetSourceFilesystem.cpp)
+                            AssetSourceFilesystem.cpp
+                            AssetIDManager.cpp
+)
 
 IF(ANDROID)
     set(ASSETS_MANAGE_SOURCE    ${ASSETS_MANAGE_SOURCE}
